Kubernetes/books-dep.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: book-app
  namespace: dusty
spec:
  replicas: 1
  selector:
    matchLabels:
      app: book-app 
  template:
    metadata:
      labels:
        app: book-app
    spec:
      containers:
        - name: book-app
          image: dustyshaw702/books:${IMAGE_TAG}
          imagePullPolicy: Always
          ports:
            - containerPort: 80
