Kubernetes/books-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: book-app-ingress
  namespace: dusty
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  ingressClassName: nginx
  rules:
  - host: voyaging-volumes.duckdns.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: book-app-service
            port:
              number: 80
